# BreezeKit

android/: README.md  build.gradle  config.gradle  settings.gradle
android/CryptoLib/: CMakeLists.txt  build.gradle
android/CryptoLib/src/androidTest/java/com/qfleng/crypto/: ExampleInstrumentedTest.kt
android/CryptoLib/src/main/: AndroidManifest.xml
android/CryptoLib/src/main/cpp/: AndroidHelper.cpp  AndroidHelper.h  Base.h  NativeMain.cpp  blur.c
android/CryptoLib/src/main/cpp/file/: FileHelper.cpp  FileHelper.h  ZlibHelper.cpp  ZlibHelper.h  ioapi.c
android/CryptoLib/src/main/cpp/security/: DigestHelper.cpp  DigestHelper.h
android/CryptoLib/src/main/java/com/qfleng/cryptokit/: ByteHelper.java  CryptoHelper.kt  HexHelper.java  NativeHelper.kt
android/CryptoLib/src/test/java/com/qfleng/crypto/: ExampleUnitTest.kt
android/CvLib/: .gitignore  CMakeLists.txt
android/CvLib/src/main/: AndroidManifest.xml
android/CvLib/src/main/cpp/: CvHelper.cpp  CvHelper.h  Mat.cpp  converters.cpp  converters.h
android/CvLib/src/main/java/com/qfleng/cvkit/: CvHelper.kt
android/CvLib/src/main/java/com/qfleng/cvkit/cv/: Converters.kt  CvException.kt  CvType.kt  Imgcodecs.kt  Imgproc.kt  Mat.kt  MatOfPoint2f.kt  Point.kt  Point3.kt  Range.kt  Rect.kt  Scalar.kt  Size.kt
android/sample/: .gitignore  build.gradle
android/sample/src/androidTest/java/com/qfleng/breezekit/: ExampleInstrumentedTest.kt
android/sample/src/main/: AndroidManifest.xml
android/sample/src/main/java/com/qfleng/sample/: App.kt  CameraActivity.kt  CameraViewModel.kt  CvActivity.kt  DirConst.kt  MainActivity.kt
android/sample/src/main/java/com/qfleng/sample/util/: FileHelper.kt  FilePathUtil.kt  FileSelector.kt  OrientationHelper.kt  RxHelper.kt  ThemeHelper.kt
android/sample/src/main/res/layout/: activity_camera.xml  activity_cv.xml  activity_main.xml
android/sample/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/sample/src/test/java/com/qfleng/breezekit/: ExampleUnitTest.kt
boringssl/: build_boringssl.sh
opencv/: .gitignore
